# Global_Mogul

./: README.md
GM_Client/: CMakeLists.txt  client_auth.c  client_auth.h  client_decryption.c  client_decryption.h  client_sockets.c  client_sockets.h  core.c  core.h  gm_client.c
GM_Server/: CMakeLists.txt  authorize.c  authorize.h  core.c  core.h  gm_server.c  jni_encryption.c  jni_encryption.h  server_auth.c  server_auth.h  server_encryption.c  server_encryption.h  server_sockets.c  server_sockets.h
JNI/: jni_encryption.c  jni_encryption.h
JNI/Font_Blanc/: log.txt
JNI/Font_Blanc/java/: EncoderDecoder_FB.java  FontBlancMain.java  Globals.java  Makefile  log.txt
JNI/Font_Blanc2.0/: log.txt
